Fix web_status casing in SKT - 012.md

--- a/playlog/SKT - 012.md
+++ b/playlog/SKT - 012.md
@@ -10,7 +10,7 @@ players_present:
   - "[[Paul Schofield]]"
   - "[[Nick Johnson]]"
 synopsis: Battle at the north walls of Goldenfields. Gimbletrump got thrown by a tree, then by an ogre-trebuchet. The team won. Got a pendant to take to Waterdeep.
-web_status: Published
+web_status: published
 ---
 ## Session Recap
 
