--- a/playlog/SKT - 012.md
+++ b/playlog/SKT - 012.md
@@ -2,73 +2,24 @@
 campaign: Storm King's Thunder
 ruleset: D&D 5e
 session: "12"
-date: 2026-02-13
+date: 2025-08-21
 gm: "[[Matthew Rogers]]"
 players_present:
   - "[[Jamie Watts]]"
   - "[[Alex Stratford]]"
   - "[[Paul Schofield]]"
   - "[[Nick Johnson]]"
-synopsis: Battle at the north walls of Goldenfields. Gimbletrump got thrown by a tree, then by an ogre-trebuchet. The team won. Got a pendant to take to Waterdeep.
-web_status: published
+synopsis: In the tower with Zepheros - swapping bones for pixie dust... pretty weird day.
+web_status: Published
 ---
 ## Session Recap
 
-- [[Lob the giant]], defeated by [[Leeferlas]], was locked in the stables. 
-- Noise of battle at the North walls summons the party
-- [[Leeferlas]] throws [[Gimbletrump]] into battle, takes huge damage but survives. [[Gimbletrump]] now dressed as a goblin - kills and maims. Tinkering with equipment he decapitates an ogre with the internal clockwork of a launcher. 
-- [[Gwithian]] moves a moonbeam around the battlefield
-- [[Kelvar]] mostly shoots arrows
-- [[Leeferlas]] thows a chunk of palisade wall into battle - does 79 damage!
-- an Ogre launches [[Gimbletrump]] back into the fields. 
-- Player-NPCs all take part, and survive. 
-- Team wins battle. [[Gimbletrump]] survives.
-- The launchers are not Ogre technology - but something else. 
-- All go to tavern to celebrate. 
-- [[Caulder Marskyl]] - head butler of [[House of Thann]] gives party a pendant and tells them to take it to [[Waterdeep]] and swap it for a reward.
- 
-
----
-
-## Key Events
-
-> [!important] Milestone
->  BATTLE was won!
-
-  
----
-
-## NPCs Encountered
-
-> [!info] New NPC: [[Caulder Marskyl]]
-> **Status:** Allied
-> Head Butler of [[House of Thann]]
-
-> [!warning] NPC Update: [[Leeferlas]]
-> **Status:** Allied
->Is an absolute tank and can do massive throwing damage!
-
----
-
-## Locations Visited
-
-- [[Goldenfields]]
-
----
-
-## Open Threads
-
-> [!question] Hook: The Nightstone is Missing 
->  Nightstone was stolen from the town of [[Nightstone]]. Is part of a magical rod - made by [[Miska]] (a wolf spider?). The rod broke into 7 parts with Miska inside. 
->  >  The giants appear to want to get the bit together.
->  The Nighstone appears to ward off dragons.  When near bits of the rod they shimmer. 
->  It appears to be part of "The Sundering" - where [[Tiamat]] rose up. Now there is disorder in the giant hierarchy and the giants are "egohurt". 
-
-> [!question] Hook: Pendant to return to the [[House of Thann]] in [[Waterdeep]]
-> Not sure why... 
-
----
-
-## Milestones
-
-- **Milestone reached:** Level up to level 4!
+- Bit of trouble in the tower - some weirdos show up. 
+- luckily, we weird them out more and swap some stuff.  they leave baffled why there was not a fight. 
+- they were apparently cultists of "Yan-C-Bin"
+- [[Gwithian]] takes loads of damage trying to wake the giant up. 
+- [[Kelvar]] shoots him with an arrow, on the nose, to wake him up. 
+- The gang get dropped off near golden fields and arrive. 
+- Hantans Tarn - custodian of the gatehouse - is pretty aggy with the gang.  but the team get in. 
+- There is a service at the Abbey; its about stuff and things. 
+- there was a bear there.  
